--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,9 @@
             </script>
         </div>
 
+        {% include clickable-image.html %}
         {%- include footer.html -%}
+
 
     </body>
 </html>
